--- a/home.css
+++ b/home.css
@@ -34,7 +34,8 @@ header{
   width: 220px;
   /*left: 50%;*/
   /*margin: 0 auto;*/
-  margin-left: 32%
+  margin-left: 27%;
+  /*text-align: center;*/
 
 }
 
@@ -172,7 +173,7 @@ padding: top:5%;
 }
 
 #iconWebMd{
-  padding-left:20%;
+  padding-left:30%;
 }
 
 #iconBeauty{
