--- a/home.css
+++ b/home.css
@@ -1,6 +1,6 @@
 /*JESSICA DAVIES UX DESIGN HOME PAGE*/
 html{
-  background:url(images/home/clouds.jpg) no-repeat center center fixed;
+  background:url(myimages/home/clouds.jpg) no-repeat center center fixed;
   -webkit-background-size:cover;
   -moz-background-size:cover;
   -o-background-size:cover;
