--- a/about.css
+++ b/about.css
@@ -1,6 +1,34 @@
+/*header{
+  background:url(myimages/about/me.jpg) no-repeat center center fixed;
+  -webkit-background-size:cover;
+  -moz-background-size:cover;
+  -o-background-size:cover;
+  background-size: cover;
+}*/
+
+/*header{
+  z-index: 1;
+  position:absolute;
+}*/
+
+/*#imgContainer{
+  background:url(myimages/about/me.jpg) no-repeat center center fixed;
+  position:relative;
+  -webkit-background-size:cover;
+  -moz-background-size:cover;
+  -o-background-size:cover;
+  background-size: cover;
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  left:0;
+  right:0;
+  bottom:0;
+}*/
 
 #myPicDiv{
-  width:500px;
+  width:100%;
   height:auto;
   left: 0;
   right: 0;
@@ -22,25 +50,29 @@ right: 0;
 
 #contact{
 background-color: rgb(154,16,112);
-color:white;
 padding-bottom: 20px;
+padding-top: 15px;
+text-align: center;
+color: rgb(236,233,226) !important;
 }
+#websiteLink, #gitHubLink, #gmail{
+  color: rgb(236,233,226) !important;
+}
+
 
 .homeH2{
-  color: white;
-  text-align: center;
-  padding-top: 30px;
-  padding-bottom: 7px;
+  color: rgb(236,233,226) ;
+
 }
 
-#jobTitle{
+/*#jobTitle{
 text-align: center;
 }
 
 
 #contactInfo{
   text-align: center;
-}
+}*/
 
 ul{
   list-style-type: none;
@@ -52,16 +84,4 @@ li{
 
 .deetsImg{
   width: 20px;
-}
-
-#websiteLink{
-  color: white !important;
-}
-
-#gitHubLink{
-  color: white !important;
-}
-
-#gmail{
-  color: white !important;
 }
