Changing rotating text color

--- a/home.css
+++ b/home.css
@@ -69,8 +69,12 @@ p{
   color: rgb(60,89,104);
 }
 
-.charcol {
-  color: rgb(74, 74, 74);
+.octoOrange{
+  color: rgb(221,98,92);
+}
+
+.octoGreen{
+  color: rgb(01,161,167);
 }
 
 
