--- a/home.css
+++ b/home.css
@@ -90,7 +90,9 @@ p{
   display:block;
 }
 .flip-container{
-  perspective: 1000;
+  perspective: 1000px;
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
   display: inline-block;
 }
 
@@ -109,6 +111,10 @@ p{
 /*speed*/
 .flipper{
   transition:0.6s;
+  -webkit-transition:0.6s;
+  -moz-transition:0.6s;
+  -webkit-transform-style:preserve-3d;
+  -moz-transform-style:preserve-3d;
   transform-style:preserve-3d;
   position:relative;
 }
@@ -116,6 +122,8 @@ p{
 /*hide back of pane during swap*/
 .front, .back{
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
   position: absolute;
   top:0;
   left:0;
@@ -124,6 +132,8 @@ p{
 /*frontpane in front of back, transform is for firefox*/
 .front{
   z-index:2;
+  -webkit-z-index:2;
+  -moz-z-index:2;
   -webkit-transform:rotateY(0deg);
   -moz-transform:rotateY(0deg);
   transform:rotateY(0deg);
