--- a/home.css
+++ b/home.css
@@ -50,6 +50,8 @@ p{
   transform: translateZ(25px);
   -webkit-transform: translateZ(25px);
   -moz-transform: translateZ(25px);
+  -moz-transform-origin: 50% 50% 25px;
+  -webkit-transform-origin: 50% 50% 25px;
   transform-origin: 50% 50% 25px;
 }
 
@@ -72,6 +74,8 @@ p{
   -webkit-transform: rotateX(0deg);
   -moz-transform: rotateX(0deg);
   transform: rotateX(0deg);
+  -moz-transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  -webkit-transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
