Added New page for Project 1 Tier 5

--- a/all-files.css
+++ b/all-files.css
@@ -1,17 +1,24 @@
-#jdLogo{
-  width:60px;
-  margin-left: 50px;
-  margin-top:-30px;
-}
-
 body{
   margin:0%;
   /*font-family: 'Muli', sans-serif;*/
   /*font-family: 'Merriweather Sans', sans-serif;*/
   /*font-family: 'Asap', sans-serif;*/
-  font-family: 'Cabin', sans-serif;
+  /*font-family: 'Roboto', sans-serif;*/
+  /*font-family: 'Cabin', sans-serif;*/
+  /*font-family: 'Istok Web', sans-serif;*/
+  font-family: 'Open Sans', sans-serif;
   color: rgb(57,57,57);
   font-size: 18px;
+}
+
+#jdLogo{
+  width:60px;
+  margin-left: 50px;
+  margin-top:3%;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: 2;
 }
 
 #wrapper{
@@ -21,4 +28,21 @@ body{
 
 #content{
   padding-bottom: 100px;
+}
+
+/*TEXT COLORS*/
+.sunset{
+  color: rgb(251,235,219);
+}
+
+.mountain {
+  color: rgb(60,89,104);
+}
+
+.octoOrange{
+  color: rgb(221,98,92);
+}
+
+.octoGreen {
+  color: rgb(01,161,167);
 }
