--- a/home.css
+++ b/home.css
@@ -10,13 +10,19 @@ html{
 /*THE ROLLING TITLE*/
 /*@import url(http://fonts.googleapis.com/css?family=Open+Sans:600);*/
 
+#rotatingText{
+  /*text-align: center;*/
+}
 .textParent{
   /*position: absolute;*/
-  width: 220px;
+  /*width: 220px;*/
   /*left: 50%;*/
+    /*text-align: center;*/
   /*margin: 0 auto;*/
-  margin-left: 27%;
-  /*text-align: center;*/
+  margin-left:29%;
+  margin-bottom: -1%;
+  /*margin top:-20%;*/
+  margin-top: -2%;
 
 }
  /*achor tag 1000px*/
@@ -35,6 +41,7 @@ p{
 
 #jessP{
   color: rgb(74,74, 74);
+
 }
 
 .word {
@@ -79,30 +86,12 @@ p{
   transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-.sunset{
-  color: rgb(251,235,219);
-}
-
-
-.mountain {
-  color: rgb(60,89,104);
-}
-
-.octoOrange{
-  color: rgb(221,98,92);
-}
-
-.octoGreen{
-  color: rgb(01,161,167);
-}
-
-
 /*CSS FOR FLIP*/
 /*container keeps perspective*/
 
 #section1{
   display:block;
-  padding-bottom: 2%;
+  /*padding-bottom: 2%;*/
 }
 
 #section2{
@@ -163,6 +152,8 @@ p{
   -moz-transform:rotateY(180deg);
   transform: rotateY(180deg);
   /*padding: 7%;*/
+  /*font-family: 'Lora', serif;*/
+  font-family: 'Playfair Display', serif;
 }
 
 /*//CARDS CENTER OF HOME PAGE.*/
@@ -248,6 +239,7 @@ color: rgb(236,233,226);
   box-shadow:none !important;
   text-align: left !important;
   margin-left: 7%;
+  /*was 4%*/
   margin-top: 4%;
 }
 .lightButton{
@@ -262,7 +254,7 @@ color: rgb(236,233,226);
 
 }
 .containerLeft{
-margin-right: 2%;
+/*margin-right: 2%;*/
 }
 
 
@@ -316,8 +308,8 @@ margin-right: 2%;
   text-shadow:none !important;
   border:none !important;
   box-shadow:none !important;
-  margin-top:50px;
-  margin-bottom:50px;
+  margin-top:2%;
+  margin-bottom:2%;
   color: rgb(236,233,226) !important;
   font-family: 'Cabin', sans-serif;
 }
