--- a/nav.css
+++ b/nav.css
@@ -1,7 +1,7 @@
 /*Other Header*/
 
 header{
-  background-color: rgba(207,208,203, 0.3);
+  background-color: rgba(207,208,203, 0.3) !important;
 }
 
 /*NAV NAV NAV NAV NAV NAV */
@@ -11,8 +11,10 @@ header{
 #navHome{
   float: right;
   font-size: 18px;
-  /*font-family: 'Cabin', sans-serif;*/
-  /*position:fixed;*/
+  /*position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: 1;*/
 }
 #navUl{
   text-decoration: none !important;
