--- a/tier5.css
+++ b/tier5.css
@@ -1,3 +1,5 @@
+/*TITLE*/
+
 #projectTitleDiv{
   width:100%;
   height:auto;
@@ -9,14 +11,21 @@
   width: 100%;
   height:350px;
   text-align: center;
+
   /*position: absolute;
   left: 0px;
   top: 0px;
   z-index: 0;*/
 }
 
-#websiteLink, #gitHubLink, #gmail{
-  color: rgb(236,233,226) !important;
+.container {
+  position: relative;
+  /*margin: 30px;*/
+  /*height: 250px;*/
+  width: 250px;
+  text-align: center;
+  display:inline-block;
+  padding-top:1%;
 }
 
 #projectTitle{
@@ -29,7 +38,45 @@
   background-color: rgb(01,161,167);
   }
 
-#projectLogo{
+.projectLogo{
   width:250px;
-  padding-top:3%;
+  /*padding-top:5%;*/
   }
+
+  /*HOVER HULA*/
+
+.image-swap img:last-child{display:none}
+.image-swap:hover img:first-child{display:none}
+.image-swap:hover img:last-child{display:inline-block}
+
+/*INTRODUCTION*/
+#introBoxes{
+  text-align: center;
+}
+
+.introBox{
+  display:inline-block;
+  width:300px;
+  height:300px;
+  border: solid 3px rgb(219,99,95);
+  /*height:300px;*/
+  margin-top: 2%;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-bottom:2%;
+}
+
+.boxTitle{
+  color: rgb(219,99,95);
+  text-align: left;
+  font-size: 24px;
+}
+
+.boxText{
+color: rgb(93,104,106);
+text-align: left;
+}
+
+.heavyText{
+  font-family: 'Lora', serif;
+}
