--- a/nav.css
+++ b/nav.css
@@ -8,7 +8,42 @@ header{
 /*nav{
   height: 50px;
 }*/
-#navHome{
+/*#menu-bar p, #menu-bar a {
+    color: white;
+    -webkit-text-shadow: none;
+    text-shadow: none;
+}*/
+
+/*HELP!!!!*/
+.navbar-default {
+    background-color:rgba(207,208,203, 0.3) !important;
+    /*border:0px;*/
+    -moz-box-shadow: none;
+    box-shadow: none;
+    filter: none;
+    background-image:none;
+    border: none;
+
+}
+.navbar-default .navbar-nav > li > a {
+    color: rgb(93,104,106) !important;
+    /*border:0px;*/
+    -moz-box-shadow: none;
+    box-shadow: none;
+    background-image:none;
+    border: none;
+}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    background-color:rgba(207,208,203, 0.3) !important;
+    color: rgb(93,104,106) !important;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    background-image:none;
+    border: none;
+}
+
+/*WAS #navHome NEED TO CHANE IN OTHER FILES*/
+#bs-example-navbar-collapse-1{
   float: right;
   font-size: 18px;
   /*position: absolute;
