--- a/footer.css
+++ b/footer.css
@@ -3,21 +3,23 @@ footer{
   /*margin-top:65px;*/
   background-color: rgba(207,208,203, 0.5);
   width:100%;
-  height:100px;
+  height:3em;
   position:absolute;
   bottom:0;
   left:0;
+  font-size:16px;
 }
 
-#footerUl{
+
+/*#footerUl{
 padding-top: 30px;
 font-size:16px;
 padding-right: 30px;
 
-}
-.footerLi{
-  display:inline;
-  vertical-align: middle;
+}*/
+footer a{
+  /*display:inline;*/
+  /*vertical-align: middle;*/
   color: rgb(74,74,74) !important;
 }
 
@@ -31,6 +33,6 @@ padding-right: 30px;
   margin-bottom: 0;
 }
 
-.liRight{
+/*.liRight{
   float:right;
-}
+}*/
