--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 /*JESSICA DAVIES UX DESIGN HOME PAGE*/
-html{
+body{
   background:url(myimages/home/clouds.jpg) no-repeat center center fixed;
   -webkit-background-size:cover;
   -moz-background-size:cover;
