--- a/nav.css
+++ b/nav.css
@@ -15,32 +15,46 @@ header{
 }*/
 
 /*HELP!!!!*/
-.navbar-default {
+.navbar-default, .navbar {
     background-color:rgba(207,208,203, 0.3) !important;
     /*border:0px;*/
-    -moz-box-shadow: none;
+    /*-moz-box-shadow: none;
+    -webkit-box-shadow:none;
     box-shadow: none;
     filter: none;
-    background-image:none;
+    background-image:none !important;
+    -webkit-background-image:none !important;
+    -moz-background-image:none !important;*/
     border: none;
-
+    border-radius: 0px;
+    border-color:none;
 }
-.navbar-default .navbar-nav > li > a {
-    color: rgb(93,104,106) !important;
+/*.navbar-default .navbar-nav > li > a {
+    color: rgb(93,104,106) !important;*/
     /*border:0px;*/
-    -moz-box-shadow: none;
+    /*-moz-box-shadow: none;
+    -webkit-box-shadow:none;
     box-shadow: none;
-    background-image:none;
+    background-image:none !important;
+    -webkit-background-image:none !important;
+    -moz-background-image:none !important;
     border: none;
-}
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    border-radius: 0px;
+    border-color:none;
+}*/
+/*.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     background-color:rgba(207,208,203, 0.3) !important;
     color: rgb(93,104,106) !important;
     -moz-box-shadow: none;
     box-shadow: none;
-    background-image:none;
+    -webkit-box-shadow:none;
+    background-image:none !important;
+    -webkit-background-image:none !important;
+    -moz-background-image:none !important;
     border: none;
-}
+    border-radius: 0px;
+    border-color:none;
+}*/
 
 /*WAS #navHome NEED TO CHANE IN OTHER FILES*/
 #bs-example-navbar-collapse-1{
@@ -51,6 +65,11 @@ header{
   top: 0px;
   z-index: 1;*/
 }
+/*.nav>li {
+  position: relative;
+  display: inline;
+}*/
+
 #navUl{
   text-decoration: none !important;
   padding-top:10px;
