--- a/footer.css
+++ b/footer.css
@@ -1,15 +1,57 @@
 
+@media screen and (min-width:1085px) {
+  .liRight{
+    padding:-30%;
+    /*float:right;*/
+  }
+
+	}
+a{
+  color:inherit;
+}
+
 footer{
   /*margin-top:65px;*/
   background-color: rgba(207,208,203, 0.5);
   width:100%;
-  height:3em;
+  height:5em;
   position:absolute;
   bottom:0;
   left:0;
   font-size:16px;
+  padding: 2%;
 }
+/*.liRight{
+  float:right;
+}*/
 
+/*.footerDivs{
+  display:inline-block;
+  /*vertical-align: middle;*/
+/*}*/
+
+/*KEEPING FOOTER DOWN*/
+/*html,
+body {
+	margin:0;
+	padding:0;
+	height:100%;
+}
+#wrapper {
+	min-height:100%;
+	position:relative;
+}
+#content {
+	padding-bottom:50px; /* Height of the footer element */
+}
+/*#footer {*/
+	/*background:#ffab62;*/
+	/*width:100%;
+	height:50px;
+	position:absolute;
+	bottom:0;
+	left:0;
+}*/
 
 /*#footerUl{
 padding-top: 30px;
@@ -24,15 +66,12 @@ footer a{
 }
 
 .footerLogos{
-  width:20px;
-  padding-left: 5px;
+  width:30px;
+  padding-left: 0.1%;
+  margin-bottom: 1.5%;
 }
 
 #crImg{
   width:15px;
-  margin-bottom: 0;
+  margin-bottom: 1%;
 }
-
-/*.liRight{
-  float:right;
-}*/
