--- a/all-files.css
+++ b/all-files.css
@@ -1,3 +1,4 @@
+/*FOR APPROPRIATE STYLING OF ALL PAGE BODYS*/
 body{
   margin:0%;
   /*font-family: 'Muli', sans-serif;*/
@@ -11,6 +12,7 @@ body{
   font-size: 18px;
 }
 
+/*FOR LOGO*/
 #jdLogo{
   width:60px;
   margin-left: 50px;
@@ -19,15 +21,6 @@ body{
   left: 0px;
   top: 0px;
   z-index: 2;
-}
-
-#wrapper{
-  min-height: 100%;
-  position: relative;
-}
-
-#content{
-  padding-bottom: 100px;
 }
 
 /*TEXT COLORS*/
@@ -46,3 +39,10 @@ body{
 .octoGreen {
   color: rgb(01,161,167);
 }
+
+/*FOR LOTS OT TEXT REQUIRING SERIF TO READ IT WELL*/
+.heavyText{
+  font-family: 'Lora', serif;
+}
+
+/*TITLE SIZES*/
