--- a/footer.css
+++ b/footer.css
@@ -1,7 +1,7 @@
 
 @media screen and (min-width:1085px) {
   .liRight{
-    padding:-30%;
+    /*padding:-30%;*/
     /*float:right;*/
   }
 
@@ -21,6 +21,17 @@ footer{
   font-size:16px;
   padding: 2%;
 }
+
+/*TO KEEP FOOTER IN LINE*/
+#wrapper{
+  min-height: 100%;
+  position: relative;
+}
+
+#content{
+  padding-bottom: 100px;
+}
+
 /*.liRight{
   float:right;
 }*/
