--- a/tier5.css
+++ b/tier5.css
@@ -1,21 +1,18 @@
-/*TITLE*/
 
-#projectTitleDiv{
-  width:100%;
-  height:auto;
-  left: 0;
-  right: 0;
+/*GET COLORING UNDER THE HEADER AND HEADER*/
+#header{
+  z-index: 2;
 }
 
 #projectTitleBox{
+  height:auto;
+  left: 0;
+  right: 0;
+  z-index: -2;
+  margin-top: -10%;
   width: 100%;
-  height:350px;
+  height:400px;
   text-align: center;
-
-  /*position: absolute;
-  left: 0px;
-  top: 0px;
-  z-index: 0;*/
 }
 
 .container {
@@ -28,11 +25,16 @@
   padding-top:1%;
 }
 
+.projectTitleSize{
+  text-align: center;
+  font-size: 30px;
+}
+
 #projectTitle{
   color: white;
-    /*color: rgb(236,233,226);*/
-  text-align: center;
+  /*color: rgb(236,233,226);*/
 }
+
 
 .titleBackground{
   background-color: rgb(01,161,167);
@@ -40,7 +42,7 @@
 
 .projectLogo{
   width:250px;
-  /*padding-top:5%;*/
+  padding-top:45%;
   }
 
   /*HOVER HULA*/
@@ -50,26 +52,32 @@
 .image-swap:hover img:last-child{display:inline-block}
 
 /*INTRODUCTION*/
-#introBoxes{
+.introBoxes{
   text-align: center;
+  margin-top: 2%;
 }
 
 .introBox{
   display:inline-block;
-  width:300px;
-  height:300px;
-  border: solid 3px rgb(219,99,95);
+  width:320px;
+  height:320px;
+  /*background-color: rgb(221, 98, 92);*/
+  /*border: solid 3px rgb(219,99,95);*/
   /*height:300px;*/
-  margin-top: 2%;
-  padding-left: 2%;
+  /*padding-left: 2%;
   padding-right: 2%;
-  padding-bottom:2%;
+  padding-bottom:2%;*/
+}
+
+.introBox1{
+  margin-right: 5%
 }
 
 .boxTitle{
-  color: rgb(219,99,95);
+  color: white;
   text-align: left;
   font-size: 24px;
+  color: rgb(221, 98, 92);
 }
 
 .boxText{
@@ -77,6 +85,42 @@ color: rgb(93,104,106);
 text-align: left;
 }
 
-.heavyText{
-  font-family: 'Lora', serif;
+/*OUR PROCESS*/
+.ourProcessTitle{
+  font-size: 30px;
+  text-align: center;
+}
+
+
+.processCircle{
+width:125px;
+height:125px;
+border-radius:50%;
+background: rgb(01,161,167);
+color: white;
+}
+
+.process{
+display:inline-block;
+}
+.arrow{
+  width:75px;
+}
+
+.stratDesCircle{
+padding-top: 4.5%;
+}
+
+.researchCircle{
+  padding-top: 3.5%;
+}
+
+.buildCircle{
+  padding-top: 3.5%;
+  padding-left: 0.5%;
+}
+
+.processCircleDiv{
+text-align: center;
+height:125px;
 }
