--- a/tier5.css
+++ b/tier5.css
@@ -35,7 +35,6 @@
   /*color: rgb(236,233,226);*/
 }
 
-
 .titleBackground{
   background-color: rgb(01,161,167);
   }
@@ -98,6 +97,7 @@ height:125px;
 border-radius:50%;
 background: rgb(01,161,167);
 color: white;
+position:relative;
 }
 
 .process{
@@ -105,10 +105,16 @@ display:inline-block;
 }
 .arrow{
   width:75px;
+  margin-bottom: 10%;
+}
+
+.circleText{
+  position:absolute;
+  width:100%;
 }
 
 .stratDesCircle{
-padding-top: 5.7%;
+padding-top:4.5%;
 }
 
 .researchCircle{
@@ -116,22 +122,170 @@ padding-top: 5.7%;
 }
 
 .buildCircle{
-  padding-top: 3.5%;
-  padding-left: 0.5%;
+  padding-top:3.5%
+
 }
 
 .processCircleDiv{
 text-align: center;
 height:125px;
+margin-top: 2%;
 }
 
+/*STRATEGY SECTION*/
+/*title bar*/
 .processSectionTitle{
   width:100%;
   height:100px;
   color:white;
   background-color: rgb(74, 74, 74);
-  margin-top: 2%;
+  margin-top: 3%;
   padding-left: 7%;
   font-size: 30px;
   padding-top: 3%;
+  margin-bottom: 3%;
+}
+/*STRATEGY SECTION: approach*/
+.ourApproachTitle{
+font-size: 30px;
+text-align: center;
+}
+
+.approachCircle{
+  width:50px;
+  height:50px;
+  border-radius:50%;
+  background-color: rgb(221,98,92);
+  /*color: rgb(74,74,74);*/
+  color:white;
+  position:relative;
+  vertical-align: top;
+  margin-right: 2%;
+}
+
+/*.approach{
+  text-align: center;
+}*/
+
+.approachNumber{
+  position:absolute;
+  width:100%;
+  font-size: 24px;
+  top:0;
+  padding-top: 12%;
+
+}
+.approach1{
+  margin-top: 1%;
+}
+.approachSections{
+  text-align: center;
+}
+.approachCircle, .approachText{
+  display:inline-block;
+}
+
+.approachText{
+text-align: left;
+margin-top: 0.5%;
+width:550px;
+}
+.approachPoints{
+font-size: 24px;
+}
+/*STRATEGY:FUNNEL SECTION*/
+
+.funnelLogos{
+  text-align: center;
+  margin-top: 3%;
+  padding-top: 2%;
+}
+
+.funnelTitle{
+  font-size: 40px;
+  text-align: center;
+  color:rgb(01, 161, 167);
+  /*font-weight: bold;*/
+  background:rgb(234,231,231);
+  margin-bottom: 4%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.competitorLogos{
+  width:250px;
+  display: inline-block;
+}
+
+.cContact, .lNexus{
+    width:300px;
+}
+
+
+.logoRow{
+  padding-bottom:1%;
+}
+
+.funnel{
+  text-align: center;
+  width: 300px;
+}
+/*STRATEGY:Competitor Table*/
+
+.compTable{
+  width:600px;
+  margin:auto;
+  margin-top:5%;
+}
+.compTableTitle{
+  font-size: 40px;
+  text-align: center;
+  color:rgb(01, 161, 167);
+  /*font-weight: bold;*/
+  background:rgb(234,231,231);
+  margin-bottom: 4%;
+  margin-top: 4%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+th{
+  text-align: center;
+}
+
+td{
+  width:100px;
+}
+
+.competitorTableLogos{
+  width:110px;
+}
+.zoomTableLogo{
+  width:75px;
+}
+
+.tierTableLogo{
+  width:90px;
+}
+
+.insideTableLogo {
+width:75px;
+margin-top:2%;
+}
+
+.salesableLogo{
+  margin-top:5%;
+}
+.dataTableLogo{
+  margin-bottom: 1%;
+}
+
+.compTableBar{
+  background-color: rgb(01, 161, 167);
+  color:white;
+  text-align: center;
+}
+
+.compaTableLines{
+
 }
