--- a/tier5.css
+++ b/tier5.css
@@ -90,7 +90,11 @@ text-align: left;
   text-align: center;
 }
 
-
+.processCircleDiv{
+text-align: center;
+height:125px;
+margin-top: 2%;
+}
 .processCircle{
 width:125px;
 height:125px;
@@ -123,14 +127,8 @@ padding-top:4.5%;
 
 .buildCircle{
   padding-top:3.5%
-
 }
 
-.processCircleDiv{
-text-align: center;
-height:125px;
-margin-top: 2%;
-}
 
 /*STRATEGY SECTION*/
 /*title bar*/
@@ -314,5 +312,83 @@ width:75px;
   /*width:700px;*/
 }
 .featureCompetition{
-  width:700px;
+  width:600px;
+}
+
+/*THE RECOMMENDATION CIRCLES*/
+
+.recCircle{
+width:125px;
+height:125px;
+border-radius:50%;
+border: solid 3px rgb(221,98,92);
+color: rgb(74, 84, 74)
+position:relative;
+}
+
+/*PIE SECTION*/
+.pieIntro{
+  text-align: center;
+  margin-top:3%;
+  margin-bottom: 3%;
+}
+
+.pies, .allRecCircle{
+  text-align: center;
+}
+
+.pieItem, .recCircle{
+  display:inline-block;
+}
+
+.pieIntroSec{
+  font-size: 20px;
+  display: inline-block;
+  vertical-align:top;
+  margin-right: 2%;
+  text-align:left;
+}
+
+.pieIntroSubTitle{
+  font-weight: bold;
+  font-size: 18px;
+}
+.pieText{
+    font-size: 16px;
+}
+
+.pies{
+
+}
+
+.pieItem25{
+  margin-left: -10%;
+  width:100px;
+}
+
+.pieItem75{
+margin-left: -13%;
+}
+
+.pieItem100{
+  margin-left: 4%;
+}
+.pieItemBig{
+  width: 200px;
+}
+
+.pieSign{
+  width:50px;
+}
+/*.operators{
+  width: 50px;
+}*/
+.piePlus{
+  margin-left:7%;
+  margin-right:4%;
+}
+
+.pieEqual{
+  margin-right:0%;
+  margin-left:5%;
 }
