--- a/tier5.css
+++ b/tier5.css
@@ -536,17 +536,7 @@ font-weight: bold;
 /*RESEARCH FINDINGS*/
 .findings{
   text-align: center;
-}
-
-.findingsCircle{
-  height:50px;
-  width:50px;
-  border-radius: 50%;
-  background-color: rgb(221,98,92);
-  display: inline-block;
-  text-align: left;
-  vertical-align: top;
-  margin-right: 2%;
+  margin-bottom: 2%;
 }
 
 .findingsText{
@@ -555,9 +545,52 @@ font-weight: bold;
   width:850px;
   /*margin-bottom: 2%;*/
 }
-.line{
-  width:5px;
-  height:20px;
+
+/*THE LINE CONNECTED TO CIRCLE*/
+.findingsCircle1{
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  text-align: center;
   background-color: rgb(221,98,92);
-  margin-left: 13.5%;
+  z-index: 2;
+  vertical-align: top;
+  display: inline-block;
+  margin-right:2%;
+}
+
+
+.findingsCircle {
+  position: relative;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  margin-top: 50px;
+  background-color: rgb(221,98,92);
+  z-index: 2;
+  vertical-align: top;
+  display: inline-block;
+  margin-right:2%;
+}
+
+.findingsCircle:first-child {
+  margin-top: 0;
+}
+
+.findingsCircle:after{
+  position: absolute;
+  background-color: rgb(221,98,92);
+  width: 5px;
+  height: 70px;
+  display: block;
+  content: '';
+  left: 50%;
+  z-index: 1;
+  top: -54px;
+  margin-left: -1px;
+}
+
+.findingsCircle:first-child:before {
+  display: none;
 }
