--- a/tier5.css
+++ b/tier5.css
@@ -515,35 +515,60 @@ font-weight: bold;
   margin:5%;
 }
 
-.square{
-  width: 175px;
-  height: 125px;
-  background-color: rgb(214,245, 242);
-  text-align: center;
-  padding:1%;
-}
-
 .rec {
-  width: 175px;
-  height: 100px;
-  background-color:rgb(74, 74, 74);
-  color: white;
+  width: 185px;
+  height: 120px;
+  color:rgb(74, 74, 74);
   text-align: left;
-  padding:1%;
+  padding:5%;
+  text-align:left;
 }
 
+.rec1{
+  background-color: rgb(214,245, 242);
+}
 
-/*RESEARCH FINDINGS*/
-.findings{
+.rec2{
+  background-color: rgb(246,243,246);
+}
+
+.rec3{
+
+  background-color: rgb(137,229,223);
+}
+
+.rec4{
+  background-color: rgb(74, 74, 74);
+  color:white;
+}
+
+.rec5{
+  background-color: rgb(01,161,167);
+  color:white;
+}
+
+.square{
+  width: 185px;
+  height: 150px;
   text-align: center;
-  margin-bottom: 2%;
+  padding: 5%;
+  margin-bottom: 10%;
 }
 
-.findingsText{
-  text-align: left;
+.recPaddimg{
+  padding-right:2%;
+}
+
+.squareRec{
+  text-align: center;
+}
+
+.squareRecSec{
   display: inline-block;
-  width:850px;
-  /*margin-bottom: 2%;*/
+}
+
+.faceCircles{
+  width:75px;
 }
 
 /*THE LINE CONNECTED TO CIRCLE*/
@@ -593,4 +618,16 @@ font-weight: bold;
 
 .findingsCircle:first-child:before {
   display: none;
+}
+
+.findings{
+  text-align: center;
+  margin-bottom: 2%;
+}
+
+.findingsText{
+  text-align: left;
+  display: inline-block;
+  width:850px;
+  /*margin-bottom: 2%;*/
 }
