--- a/tier5.css
+++ b/tier5.css
@@ -456,7 +456,7 @@ font-weight: bold;
 
 .researchCircles, {
   display:inline-block;
-  width: 450px;
+  /*width: 550px;*/
   vertical-align: top;
 }
 
@@ -469,26 +469,26 @@ font-weight: bold;
     display:inline-block;
 }
 
+/*TRIAGLES*/
 .researchTriangles{
   width: 450px;
   vertical-align: top;
   display:inline-block;
 }
 .triangleSection{
-  text-align: center;
+  text-align: left;
 }
 
 .triangle{
   width:100px;
   /*vertical-align: bottom;*/
-  display:inline;
-  /*float:right;*/
+  display:inline-block;
+text-align: right;
   /*text-align: right;*/
 }
 
 .triangleText{
-  display:inline;
-  text-align: left;
+  display:inline-block;
   width:350px;
 }
 
@@ -497,7 +497,6 @@ font-weight: bold;
   /*background-color:rgb(234,231,231);*/
   /*background-color:rgb(197, 240, 236);*/
   text-align: center;
-
 }
 
 .brain{
@@ -630,4 +629,138 @@ font-weight: bold;
   display: inline-block;
   width:850px;
   /*margin-bottom: 2%;*/
+}
+
+/*SYNTHESIS SECTION*/
+/*JOURNEY MAP*/
+
+.centerJMap{
+  text-align: center;
+}
+.journeyTitle{
+  font-size: 30px;
+  /*margin-left: 7%;*/
+  margin-bottom: 2%;
+}
+
+.journeyMap{
+  width:960px;
+/*margin-left: 7%;*/
+}
+
+/*PERSONAS*/
+.personaAjayBrad{
+  display:inline-block;
+  /*font-size: 16px;*/
+  text-align: center;
+}
+
+.squaresPersonas{
+  text-align: center;
+  /*CHECK THIS COLOR*/
+  border: 3px solid rgb(201,210,210);
+  display:inline-block;
+  /*width:450px;*/
+  margin: 0.5%;
+}
+
+.personaTypes{
+  font-size: 24px;
+  margin-left: 7%;
+}
+
+.ajay{
+width:150;
+/*height:150;*/
+display:inline-block;
+margin: 0.5%;
+}
+
+.brad{
+width:150;
+/*height:150;*/
+display:inline-block;
+margin: 0.5%;
+}
+
+.textBoxName{
+width:200;
+/*height:150;*/
+display:inline-block;
+text-align: left;
+margin: 0.5%;
+}
+
+.ajayName{
+  background-color: rgb(01, 161, 167);
+  color:white;
+}
+
+.textBoxQuote{
+  width:100;
+  /*height:150;*/
+  display:inline-block;
+  margin: 0.5%;
+}
+
+.textBoxQuoteAjay{
+background-color: rgb(213,245,242);
+}
+
+.textBoxGoals{
+  width:150;
+  /*height:100;*/
+  background-color: rgb(201,210,210);
+  display:inline-block;
+  text-align: left;
+  margin: 0.5%;
+}
+
+.textBoxFrustrations{
+  width:200;
+  /*height:100;*/
+  color:white;
+  background-color: rgb(74, 74, 74);
+  display:inline-block;
+  text-align: left;
+  margin: 0.5%;
+}
+
+.textBoxTech{
+  width:100;
+  /*height:100;*/
+  background-color: rgb(246, 243, 246);
+  display:inline-block;
+  text-align: left;
+  margin: 0.5%;
+}
+
+.textBoxNameBrad{
+  background-color: rgb(221, 98, 92);
+  color: white;
+}
+
+.textBoxQuoteBrad{
+  background-color: rgb(230,140,135);
+}
+
+/*USER FLOW*/
+.userFlowTitle{
+  font-size: 24px;
+  text-align: left;
+  margin-left: 20%;
+}
+.userBracket{
+  margin:3%;
+  width:400px;
+  margin-left: 12%;
+}
+
+.userFlow{
+  text-align: center;
+}
+
+.userFlowImg{
+  width:800px;
+  margin-top: -5%;
 }
