--- a/tier5.css
+++ b/tier5.css
@@ -669,22 +669,22 @@ text-align: right;
 }
 
 .ajay{
-width:150;
-height:150;
+width:150px;
+height:150px;
 display:inline-block;
 margin: 0.5%;
 }
 
 .brad{
-width:150;
-height:150;
+width:150px;
+height:150px;
 display:inline-block;
 margin: 0.5%;
 }
 
 .textBoxName{
-width:200;
-height:150;
+width:200px;
+height:150px;
 display:inline-block;
 text-align: left;
 margin: 0.5%;
@@ -696,8 +696,8 @@ margin: 0.5%;
 }
 
 .textBoxQuote{
-  width:100;
-  height:150;
+  width:100px;
+  height:150px;
   display:inline-block;
   margin: 0.5%;
 }
@@ -707,8 +707,8 @@ background-color: rgb(213,245,242);
 }
 
 .textBoxGoals{
-  width:150;
-  height:100;
+  width:150px;
+  height:100px;
   background-color: rgb(201,210,210);
   display:inline-block;
   text-align: left;
@@ -716,8 +716,8 @@ background-color: rgb(213,245,242);
 }
 
 .textBoxFrustrations{
-  width:200;
-  height:100;
+  width:200px;
+  height:100px;
   color:white;
   background-color: rgb(74, 74, 74);
   display:inline-block;
@@ -726,8 +726,8 @@ background-color: rgb(213,245,242);
 }
 
 .textBoxTech{
-  width:100;
-  height:100;
+  width:100px;
+  height:100px;
   background-color: rgb(246, 243, 246);
   display:inline-block;
   text-align: left;
