--- a/all-files.css
+++ b/all-files.css
@@ -10,6 +10,7 @@ body{
   font-family: 'Open Sans', sans-serif;
   color: rgb(57,57,57);
   font-size: 18px;
+  overflow-x: hidden;
 }
 
 /*FOR LOGO*/
