--- a/about.css
+++ b/about.css
@@ -4,9 +4,6 @@
 }
 
 #myPicDiv{
-  /*width:100%;*/
-  /*background-image: url(myimages/about/me.jpg);*/
-  /*height:100%;*/
   left: 0;
   right: 0;
   z-index: -2;
@@ -58,10 +55,10 @@ color: rgb(236,233,226) !important;
 #websiteLink, #gitHubLink, #gmail{
   color: rgb(236,233,226) !important;
 }
+.deetsLi{
+  color:white;
 
-/*#aboutTitle{
-  font-size: 40px;
-}*/
+}
 
 .sectionTitle{
   font-size: 40px;
@@ -75,7 +72,6 @@ color: rgb(236,233,226) !important;
 font-size: 20px;
 }
 
-
 ul{
   list-style-type: none;
 }
@@ -83,10 +79,6 @@ ul{
 li{
   display: inline;
 }
-/*
-.deetsLi{
-  font-size:
-}*/
 
 .deetsImg{
   width: 20px;
