--- a/home.css
+++ b/home.css
@@ -8,10 +8,10 @@ body{
 }
 
 /*THE ROLLING TITLE*/
-/*@import url(http://fonts.googleapis.com/css?family=Open+Sans:600);*/
-
 #rotatingText{
   /*text-align: center;*/
+margin-top: 5%;
+margin-bottom: 3%;
 }
 .textParent{
   /*position: absolute;*/
@@ -293,8 +293,6 @@ color: rgb(236,233,226);
 
 }
 
-
-
 #buttonDiv{
   text-align: center;
 }
@@ -308,7 +306,7 @@ color: rgb(236,233,226);
   text-shadow:none !important;
   border:none !important;
   box-shadow:none !important;
-  margin-top:2%;
+  margin-top:3%;
   margin-bottom:2%;
   color: rgb(236,233,226) !important;
   font-family: 'Cabin', sans-serif;
