--- a/webmd.css
+++ b/webmd.css
@@ -10,7 +10,17 @@ body{
 
 
 a{
-display: block;
-text-align: left;
-margin-left: 15%;
+  display: block;
+  text-align: left;
+  margin-left: 15%;
+}
+
+.comingSoon{
+  width:70%;
+  text-align: center;
+  margin: 0 auto;
+}
+.des{
+  text-align: left;
+  font-size: 24px;
 }
