--- a/about.css
+++ b/about.css
@@ -49,16 +49,13 @@ background-color: rgb(154,16,112);
 padding-bottom: 20px;
 padding-top: 15px;
 text-align: center;
-color: rgb(236,233,226) !important;
+color: white !important;
 }
 
 #websiteLink, #gitHubLink, #gmail{
   color: rgb(236,233,226) !important;
 }
-.deetsLi{
-  color:white;
 
-}
 
 .sectionTitle{
   font-size: 40px;
@@ -80,6 +77,13 @@ li{
   display: inline;
 }
 
+.anchor{
+color: white !important;
+}
 .deetsImg{
-  width: 20px;
+  width: 25px;
+}
+
+.gitLinked{
+  width: 27px;
 }
