--- a/footer.css
+++ b/footer.css
@@ -1,25 +1,14 @@
-
+/*
 @media screen and (min-width:1085px) {
   .liRight{
     /*padding:-30%;*/
-    /*float:right;*/
-  }
+    /*float:right;
+  }*/
 
-	}
-a{
-  color:inherit;
-}
-
-footer{
-  /*margin-top:65px;*/
-  background-color: rgba(207,208,203, 0.5);
-  width:100%;
-  height:5em;
-  position:absolute;
-  bottom:0;
-  left:0;
-  font-size:16px;
-  padding: 2%;
+  body {
+	margin:0;
+	padding:0;
+	height:100%;
 }
 
 /*TO KEEP FOOTER IN LINE*/
@@ -29,55 +18,32 @@ footer{
 }
 
 #content{
-  padding-bottom: 100px;
+  padding-bottom: 80px;
 }
 
-/*.liRight{
-  float:right;
-}*/
-
-/*.footerDivs{
-  display:inline-block;
-  /*vertical-align: middle;*/
-/*}*/
-
-/*KEEPING FOOTER DOWN*/
-/*html,
-body {
-	margin:0;
-	padding:0;
-	height:100%;
+#footer{
+  /*margin-top:65px;*/
+  background-color: rgba(207,208,203, 0.5);
+  width:100%;
+  height:80px;
+  position:absolute;
+  bottom:0;
+  left:0;
+  font-size:16px;
+  padding: 2%;
 }
-#wrapper {
-	min-height:100%;
-	position:relative;
-}
-#content {
-	padding-bottom:50px; /* Height of the footer element */
-}
-/*#footer {*/
-	/*background:#ffab62;*/
-	/*width:100%;
-	height:50px;
-	position:absolute;
-	bottom:0;
-	left:0;
-}*/
 
-/*#footerUl{
-padding-top: 30px;
-font-size:16px;
-padding-right: 30px;
+a{
+  color:inherit;
+}
 
-}*/
+
 footer a{
-  /*display:inline;*/
-  /*vertical-align: middle;*/
   color: rgb(74,74,74) !important;
 }
 
 .footerLogos{
-  width:30px;
+  width:30px !important;
   padding-left: 0.1%;
   margin-bottom: 1.5%;
 }
