--- a/footer.css
+++ b/footer.css
@@ -30,7 +30,9 @@
   bottom:0;
   left:0;
   font-size:16px;
-  padding: 2%;
+  padding-top: 3%;
+  padding-bottom: 2%;
+  padding-left:
 }
 
 a{
@@ -43,7 +45,7 @@ footer a{
 }
 
 .footerLogos{
-  width:30px !important;
+  width:25px !important;
   padding-left: 0.1%;
   margin-bottom: 1.5%;
 }
