--- a/project.css
+++ b/project.css
@@ -14,3 +14,16 @@
 .statmentOrange{
   color:rgb(221, 98, 92);
 }
+
+/*strategy*/
+.processSectionTitle{
+  width:100%;
+  height:100px;
+  color:white;
+  background-color: rgb(74, 74, 74);
+  margin-top: 3%;
+  padding-left: 7%;
+  font-size: 30px;
+  padding-top: 3%;
+  margin-bottom: 3%;
+}
