--- a/tier5.css
+++ b/tier5.css
@@ -93,6 +93,7 @@ text-align: left;
 .ourProcessTitle{
   font-size: 30px;
   text-align: center;
+  margin-top:2%;
 }
 
 .processCircleDiv{
@@ -114,7 +115,7 @@ display:inline-block;
 
 .arrow{
   width:75px;
-  margin-bottom: 100px;
+  padding-bottom: 100px;
 }
 
 .circleText{
@@ -129,30 +130,25 @@ display:inline-block;
 .oneLine{
   padding-top: 40px;
 }
-
+/*
 .ourProcess{
   margin-bottom: -5%;
-}
+}*/
 
-@media screen (min-width:430px) and (max-width: 558px) {
-  .build{
-    margin-bottom: 200px;
+/*@media screen (min-width:430px) and (max-width: 558px) {
+  .ourProcess{
+    margin-bottom: 100px;
   }
-}
+}*/
 
 /*STRATEGY SECTION*/
 /*title bar*/
-.processSectionTitle{
-  width:100%;
-  height:100px;
-  color:white;
-  background-color: rgb(74, 74, 74);
-  margin-top: 3%;
-  padding-left: 7%;
-  font-size: 30px;
-  padding-top: 3%;
-  margin-bottom: 3%;
-}
+
+
+
+/*#strategySection{
+  margin-top: -1%;
+}*/
 
 /*STRATEGY SECTION: approach*/
 .ourApproachTitle{
@@ -232,10 +228,15 @@ font-size: 24px;
 /*STRATEGY:Competitor Table*/
 
 .compTable{
-  width:720px;
+  width:80%;
   margin:auto;
   margin-top:5%;
+  /*overflow-x: scroll;*/
 }
+table{
+  border-top: 0px !important;
+}
+
 .compTableTitle{
   font-size: 40px;
   text-align: center;
@@ -938,3 +939,38 @@ text-align: center;
 .iconSentence{
   text-align: left;
 }
+
+/*SECTION AT BOTTOM FOR NEXT PORTFOLIO*/
+
+.nextPort{
+  font-size:18px;
+}
+
+.arrowAndText{
+  display:inline-block;
+}
+
+.arrowPort{
+  width: 25px;
+}
+
+/*Up next for Tier 5 only */
+.processSectionTitleUpNext{
+  padding-left: 6%;
+  padding-top: 3%;
+  width:100%;
+  height:110px;
+  color:white;
+  background-color: rgb(74, 74, 74);
+  margin-top: 3%;
+  padding-left: 6%;
+  font-size: 30px;
+  margin-bottom: 3%;
+
+}
+
+@media screen (max-width: 768px) {
+  .processSectionTitleUpNext{
+      height:150px;
+      padding-bottom: 3%;
+  }
