--- a/home.css
+++ b/home.css
@@ -11,7 +11,8 @@ body{
 #rotatingText{
   /*text-align: center;*/
 margin-top: 5%;
-margin-bottom: 3%;
+margin-bottom: 0%;
+/*margin-bottom: 3%;*/
 }
 .textParent{
   /*position: absolute;*/
