--- a/tier5.css
+++ b/tier5.css
@@ -316,9 +316,13 @@ width:75px;
 
 /*THE RECOMMENDATION CIRCLES*/
 
+.circleRecWrapper{
+  text-align: center;
+}
+
 .recCircle{
-width:220px;
-height:220px;
+width:225px;
+height:225px;
 border-radius:50%;
 border: solid 3px rgb(221,98,92);
 color: rgb(74, 84, 74);
@@ -327,39 +331,38 @@ margin-left: 2%;
 position:relative;
 }
 
-.circleRecWrapper{
-  text-align: center;
-}
-
 .circleRecText{
   font-size: 18px;
   position:absolute;
   width:100%;
   padding-top:25%;
-  padding-left: 2%;
-  padding-right:2%;
+  padding-left:5%;
+  padding-right:5%;
 }
 /*PIE SECTION*/
 .pieIntro{
   text-align: center;
   margin-top:3%;
-  margin-bottom: 3%;
-}
-
-.pies{
-  text-align: center;
-}
-
-.pieItem{
-  display:inline-block;
+  /*margin-bottom: 3%;*/
 }
 
 .pieIntroSec{
   font-size: 20px;
   display: inline-block;
+  text-align:center;
+}
+.pies{
   vertical-align:top;
-  margin-right: 2%;
-  text-align:left;
+}
+.pieItem{
+  width:200px;
+  text-align: center;
+  margin-bottom: 3%;
+}
+
+.pieItem25{
+  width:100px;
+  padding-top: 10%;
 }
 
 .pieIntroSubTitle{
@@ -367,38 +370,25 @@ position:relative;
   font-size: 18px;
 }
 .pieText{
-    font-size: 16px;
+  font-size: 16px;
 }
 
-.pieItem25{
-  margin-left: -10%;
-  width:100px;
+.operators{
+padding-top: 175px;
 }
 
-.pieItem75{
-margin-left: -13%;
-}
 
-.pieItem100{
-  margin-left: 4%;
-}
-.pieItemBig{
-  width: 200px;
-}
 
 .pieSign{
   width:50px;
 }
 
-.piePlus{
-  margin-left:7%;
-  margin-right:4%;
+@media (max-width: 414px) {
+  .pieEqual{
+    padding-top: 0px;
+  }
 }
 
-.pieEqual{
-  margin-right:0%;
-  margin-left:5%;
-}
 
 /*INTERVIEW & SURVERY SECTION*/
 
@@ -832,22 +822,17 @@ padding-top: 5%;
 }
 
 .venn{
-  width: 70%;
+  width: 60%;
 }
 
 /*SYNTHESIS: TWO EXPERIENCES*/
 
 .experiences{
   text-align: center;
-  /*width:900px;*/
 }
 .realTimeAndNur{
   display: inline;
 }
-/*
-.realTime{
-  margin-right: 7%;
-}*/
 
 .pillar{
   display: inline-block;
@@ -869,9 +854,16 @@ padding-top: 5%;
   text-align: left;
 }
 
-/*.experienceSentence{
+.experienceSentence{
   width: 300px;
+}
+
+/*@media screen (min-width: 781px) and (max-width: 477px) {
+  .realTimeAndNur{
+      display:block;
+  }
 }*/
+
 
 /*DESIGN: VIDEO*/
 
@@ -880,10 +872,7 @@ text-align: center;
 }
 
 .iframe{
-  /*width:500px;
-  height:400px;*/
   display:inline-block;
-  /*margin-left: 7%;*/
   margin-right: 7%;
   margin-bottom: 3%;
 }
@@ -896,7 +885,6 @@ text-align: center;
 }
 
 /*DESIGN:INITAL FEATURES*/
-
 .subTitle{
   font-size: 24px;
   font-weight: bold;
@@ -915,16 +903,11 @@ text-align: center;
 .features{
   text-align: center;
 }
-/*
-.iconSentence{
-  text-align: left;
-}*/
 
 .featureIcon{
   width: 25px;
   display: inline-block;
   margin-right: 1%;
-  /*text-align: left;*/
 }
 
 .flagIcon{
@@ -940,8 +923,66 @@ text-align: center;
   text-align: left;
 }
 
-/*SECTION AT BOTTOM FOR NEXT PORTFOLIO*/
+/*User Testing*/
 
+.testingCircleSec{
+  text-align: center;
+}
+
+.testingCircles{
+  width:100px;
+  height:100px;
+  border-radius:50%;
+  display: inline-block;
+}
+
+.userTestingRounds{
+  color:rgb(74, 74, 74);
+  font-size: 24px;
+  /*margin-bottom: -50px;*/
+  /*z-index: 2;*/
+}
+
+/*.userTestingRounds, .circle1, .circle2, .circle3{
+  position: absolute;
+}*/
+
+.circle1{
+  background-color: rgb(01,161,167);
+  margin-right:-20px;
+}
+
+.circle2{
+  background-color: rgb(221,98,92);
+    margin-right:-20px;
+}
+
+.circle3{
+  background-color: rgb(74, 74, 74);
+}
+
+.prototypes{
+  text-align: center;
+}
+
+.prototypeImg{
+  width:250px;
+  /*width:200px;*/
+}
+
+.prototypeImgDiv{
+  display:inline-block;
+  /*border:2px solid rgb(221,98,92);*/
+  border:1px solid rgb(74, 74, 74);
+  width:255px;
+  /*width:205px;*/
+  height:275px;
+  /*height:220px;*/
+  vertical-align: top;
+  margin:15px;
+}
+
+/*SECTION AT BOTTOM FOR NEXT PORTFOLIO*/
 .nextPort{
   font-size:18px;
 }
@@ -966,7 +1007,6 @@ text-align: center;
   padding-left: 6%;
   font-size: 30px;
   margin-bottom: 3%;
-
 }
 
 @media screen (max-width: 768px) {
@@ -974,3 +1014,4 @@ text-align: center;
       height:150px;
       padding-bottom: 3%;
   }
+}
