--- a/tier5.css
+++ b/tier5.css
@@ -677,9 +677,7 @@ margin-left:0;
 margin-right:0;
 }
 
-.padding{
-  padding: 2%;
-}
+
 
 /*lines around personas*/
 /*CHECK THIS COLOR*/
@@ -730,6 +728,12 @@ margin: 5px;
 
 .boxTitles{
   font-weight: bold;
+}
+.padding{
+  /*padding: 2%;*/
+  padding-top: 2%;
+  padding-left:2%;
+  padding-right: 2%;
 }
 
 .textBoxQuoteAjay{
