--- a/tier5.css
+++ b/tier5.css
@@ -691,6 +691,10 @@ margin-right:0;
 }*/
 
 /*Title for personas*/
+
+/*table{
+  display:inline-block;
+}*/
 .personaTypes{
   font-size: 24px;
   /*margin-left: 7%;*/
@@ -699,15 +703,16 @@ margin-right:0;
 .brad, .ajay{
 width:175px;
 height:175px;
-display:inline-block;
+/*display:inline-block;*/
 margin: 5px;
 vertical-align: top;
 }
 
+
 .textBoxName{
 width:240px;
 height:175px;
-display:inline-block;
+/*display:inline-block;*/
 text-align: left;
 margin: 5px;
 }
@@ -720,7 +725,7 @@ margin: 5px;
 .textBoxQuote{
   width:115px;
   height:175px;
-  display:inline-block;
+  /*display:inline-block;*/
   margin: 5px;
   vertical-align: top;
   font-style: italic;
@@ -750,7 +755,7 @@ padding-top: 5%;
   height:200px;
   background-color: rgb(222,225,225);
     /*background-color: rgb(201,210,210);*/
-  display:inline-block;
+  /*display:inline-block;*/
   text-align: left;
   margin: 5px;
   vertical-align: top;
@@ -761,7 +766,7 @@ padding-top: 5%;
   height:200px;
   color:white;
   background-color: rgb(74, 74, 74);
-  display:inline-block;
+  /*display:inline-block;*/
   text-align: left;
   margin: 5px;
   vertical-align: top;
@@ -769,7 +774,7 @@ padding-top: 5%;
 
 .textBoxTech{
   background-color: rgb(246, 243, 246);
-  display:inline-block;
+  /*display:inline-block;*/
   text-align: left;
   margin: 5px;
   vertical-align: top;
@@ -781,6 +786,9 @@ padding-top: 5%;
 .textBoxNameBrad{
   background-color: rgb(221, 98, 92);
   color: white;
+}
+td{
+  margin: 5px;
 }
 
 /*USER FLOW*/
